restructure html to fix invalid bootstrap container-row relations, fixing horizontal overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,7 +23,8 @@
 
 body {
     font-family: var(--primary-font);
-    max-width: 100vw;
+    max-width: 100%;
+    margin-top: 57px; /* to offset fixed navbar height */
 }
 
 section {
